frontend/src/component/playlist-tree/playlist-tree.scss
.playlist-tree {
  font-size: 12px;

  .tree-expander {
    margin-right: 6px;

    &:hover {
      color: var(--tree-expander-hover-color);
    }
  }

  .tree-expander, .tool-button {
    cursor: pointer;
    * {
      pointer-events: none;
    }
  }

  .tree-group {
    .tree-group-header {
      display: flex;
      flex-flow: row;
      align-items: center;
      height: 1.3em;

      .tree-group-header-content {
        display: flex;
        flex-flow: row;
        align-items: center;
      }

      input[type='checkbox'] {
        cursor: pointer;
      }

      .tree-group-count {
        margin-left: 10px;
        color: var(--tree-count-color);
      }
    }

    .tree-group-childs {
      .tree-channel {
        display: flex;
        flex-flow: row;
        align-items: center;
        margin-left: 50px;
        height: 1.3em;

        .tree-channel-tools {
          display: flex;
          flex-flow: row;
          align-items: center;
          gap: 3px;

          .tool-button {
            display: flex;
            align-items: center;
            justify-content: center;
            height: 1em;
            width: 1em;
            border-radius: 2px;
            background-color: var(--tool-button-background-color);
            color: var(--tool-button-color);
            svg {
              width: 0.5em;
              height: 0.5em;
            }

            &:hover {
              color: var(--tool-button-hover-color);
              background-color: var(--tool-button-hover-background-color);
            }
          }
        }

        .tree-channel-content {
          display: flex;
          flex-flow: row;
          align-items: center;
        }

        .tree-channel-nr {
          width: 20px;
          font-size: 0.8em;
          margin-right: 8px;
          text-align: right;
          color: var(--tree-count-color);

          &:after {
            content: ')';
          }
        }
      }
    }

    .tree-group-header-content, .tree-channel-content {
      cursor: pointer;

      &:hover {
        background-color: var(--tree-hover-background-color);
        color: var(--tree-hover-color);

        .tree-group-count {
          color: var(--tree-hover-color);
        }
      }
    }
  }

}

.download-info {
  position: fixed;
  left: 12px;
  top: 12px;
  background-color: var(--popup-background-color);
  color: var(--popup-color);
  filter: drop-shadow(2px 2px 3px var(--popup-shadow-color));
  border: 1px solid var(--popup-border-color);
  z-index: 100;

  ul {
    list-style-type: none; /* Remove bullets */
    padding: 0; /* Remove padding */
    margin: 0; /* Remove margins */
    li {
      padding: 8px;
      border-radius: 4px;
      user-select: none;
      cursor: pointer;
      &:hover {
        color: var(--popup-hover-color);
        background-color: var(--popup-hover-background-color);
      }
    }
  }
}

